# pinata-unpin-by-file

./: .gitignore  Cargo.toml  readme.md
src/: main.rs  unpin_by_hash.rs
