[package]
name = "my_app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pinata-sdk = "0.1.0"
tokio = { version = "0.2.0", features = ["full"] }
colored = "2.0.0"
dotenv = "0.15.0"
serde_json = "1.0"
reqwest = { version = "0.11.0", features = ["json"] }
indicatif = "0.15.0"

